added tour card and acitivites section

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <main>
       <header class="header">
-        <img class="header_bg" src="img/2.webp" alt="img" />
+        <!-- <img class="header_bg" src="img/1.webp" alt="img" /> -->
         <nav class="navbar">
           <ul class="navbar_brand">
             <li class="navbar_brand-logo">
@@ -28,21 +28,101 @@
         </nav>
 
         <section class="header-content">
-          <h2 class="header-content-title">
+          <h1 class="header-content-title">
             Explore The Incredible <span> Bharat</span>
-          </h2>
+          </h1>
           <input
             type="search"
             name="search"
             placeholder="Search for the destination, things to do and more...."
             id="search"
           />
-          <div class="header-content-link">
-            <i></i>
-            <p>Plan your Journey</p>
-          </div>
+
+          <button class="btn btn-text">
+            <object data="icon/arrow-right-circle.svg"></object>
+            Plan your Journey
+          </button>
         </section>
       </header>
+      <!--  -->
+      <section class="tours">
+        <div class="tours_heading">
+          <h2>Adventures Awaits: Embrace the Journey</h2>
+        </div>
+        <div class="tours_cards">
+          <div class="tours_card">
+            <figure class="tours_card-img">
+              <img loading="lazy" src="img/2.webp" alt="" />
+            </figure>
+            <h3 class="tours_card-title">Spiritual Tours</h3>
+          </div>
+          <div class="tours_card">
+            <figure class="tours_card-img">
+              <img loading="lazy" src="img/3.webp" alt="" />
+            </figure>
+            <h3 class="tours_card-title">Wild Safari</h3>
+          </div>
+          <div class="tours_card">
+            <figure class="tours_card-img">
+              <img loading="lazy" src="img/4.webp" alt="" />
+            </figure>
+            <h3 class="tours_card-title">Royal Palaces</h3>
+          </div>
+        </div>
+        <div class="carousel-circles">
+          <span></span><span></span><span></span>
+        </div>
+      </section>
+      <!--  -->
+      <section class="activites">
+        <h2>Activities We Offer</h2>
+        <div class="activites_option">
+          <figure class="activites_option-img">
+            <img src="img/5.webp" alt="activites image" />
+          </figure>
+          <ul class="activites_option-list">
+            <li class="activites_option-list_item">
+              <object data="icon/material-symbols_hiking.svg" type=""></object>
+              <p>Walking and Hiking</p>
+              <button class="btn btn-text">
+                <object data="icon/arrow-right-circle.svg" type=""></object>
+              </button>
+            </li>
+            <li class="activites_option-list_item">
+              <object data="icon/bx_cycling.svg" type=""></object>
+              <p>Cycling</p>
+              <button class="btn btn-text">
+                <object data="icon/arrow-right-circle.svg" type=""></object>
+              </button>
+            </li>
+            <li class="activites_option-list_item">
+              <object data="icon/tabler_trekking.svg" type=""></object>
+              <p>Trekking</p>
+              <button class="btn btn-text">
+                <object data="icon/arrow-right-circle.svg" type=""></object>
+              </button>
+            </li>
+            <li class="activites_option-list_item">
+              <object data="icon/map_rafting.svg" type=""></object>
+              <p>Rafting</p>
+              <button class="btn btn-text">
+                <object data="icon/arrow-right-circle.svg" type=""></object>
+              </button>
+            </li>
+            <li class="activites_option-list_item">
+              <object
+                data="icon/healthicons_exercise-yoga.svg"
+                type=""
+              ></object>
+
+              <p>Yoga</p>
+              <button class="btn btn-text">
+                <object data="icon/arrow-right-circle.svg" type=""></object>
+              </button>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
   </body>
 </html>
