changed font family work san to rubik, added feedback, quote section

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   </head>
   <body>
     <main>
+      <!-- Header Section    ---------------------------------------------------->
       <header class="header">
         <!-- <img class="header_bg" src="img/1.webp" alt="img" /> -->
         <nav class="navbar">
@@ -21,6 +22,7 @@
             <li class="navbar_brand-name">Bharaman</li>
           </ul>
           <div class="navbar-links">
+            <a href="#">TOUR PACKAGE</a>
             <a href="#">ACTIVITES</a>
             <a href="#">TESTIMONIAL</a>
             <a href="#">DESTINATIONS</a>
@@ -44,7 +46,7 @@
           </button>
         </section>
       </header>
-      <!--  -->
+      <!-- Tour Package Section  -------------------------------------------------->
       <section class="tours">
         <div class="tours_heading">
           <h2>Adventures Awaits: Embrace the Journey</h2>
@@ -73,7 +75,7 @@
           <span></span><span></span><span></span>
         </div>
       </section>
-      <!--  -->
+      <!-- Activites Section    ---------------------------------------------------->
       <section class="activites">
         <h2>Activities We Offer</h2>
         <div class="activites_option">
@@ -121,6 +123,35 @@
               </button>
             </li>
           </ul>
+        </div>
+      </section>
+
+      <!-- Quote Section        ---------------------------------------------------->
+      <section class="quote">
+        <div class="quote_content">
+          <h4 class="quote_content-text">
+            “It is better to travel well than to arrive.”
+          </h4>
+          <h4 class="quote_content-author">~ Bhagwan Buddha</h4>
+        </div>
+      </section>
+      <!-- FeedBack Section        ---------------------------------------------------->
+      <section class="feedback">
+        <div class="feedback_content">
+          <h2 class="feedback_content-title">What Our Client Says</h2>
+          <figure class="feedback_content-user_img">
+            <img src="img/7.webp" alt="User image" loading="lazy" />
+          </figure>
+
+          <p class="feedback_content-text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae
+            quaerat saepe, qui obcaecati laudantium incidunt dolore perferendis
+            sint, deserunt earum at.
+          </p>
+          <p class="feedback_content-username">Sara</p>
+          <div class="feedback_content-nav">
+            <object data="" type=""></object><object data="" type=""></object>
+          </div>
         </div>
       </section>
     </main>
