--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
           <h4 class="quote_content-author">~ Bhagwan Buddha</h4>
         </div>
       </section>
-      <!-- FeedBack Section        ---------------------------------------------------->
+      <!-- FeedBack Section        -------------------------------------------------->
       <section class="feedback">
         <div class="feedback_content">
           <h2 class="feedback_content-title">What Our Client Says</h2>
@@ -150,9 +150,159 @@
           </p>
           <p class="feedback_content-username">Sara</p>
           <div class="feedback_content-nav">
-            <object data="" type=""></object><object data="" type=""></object>
+            <object data="icon/arrow-left-circle.svg" type=""></object
+            ><object data="icon/arrow-right-circle.svg" type=""></object>
           </div>
         </div>
+      </section>
+      <!-- Gallery Section        -------------------------------------------------->
+      <section class="gallery">
+        <div class="gallery_content">
+          <h2 class="gallery_content-title">Incredible Destinations</h2>
+          <p class="gallery_content-text">
+            Welcome to the world of wonder with Bhraman
+          </p>
+        </div>
+        <figure class="gallery_img">
+          <img
+            src="img/gallery/1.webp"
+            alt="destination images"
+            loading="lazy"
+          />
+        </figure>
+        <figure class="gallery_img">
+          <img
+            src="img/gallery/2.webp"
+            alt="destination images"
+            loading="lazy"
+          />
+        </figure>
+        <figure class="gallery_img">
+          <img
+            src="img/gallery/3.webp"
+            alt="destination images"
+            loading="lazy"
+          />
+        </figure>
+        <figure class="gallery_img">
+          <img
+            src="img/gallery/4.webp"
+            alt="destination images"
+            loading="lazy"
+          />
+        </figure>
+        <figure class="gallery_img">
+          <img
+            src="img/gallery/5.webp"
+            alt="destination images"
+            loading="lazy"
+          />
+        </figure>
+        <figure class="gallery_img">
+          <img
+            src="img/gallery/6.webp"
+            alt="destination images"
+            loading="lazy"
+          />
+        </figure>
+        <figure class="gallery_img">
+          <img
+            src="img/gallery/7.webp"
+            alt="destination images"
+            loading="lazy"
+          />
+        </figure>
+        <figure class="gallery_img">
+          <img
+            src="img/gallery/8.webp"
+            alt="destination images"
+            loading="lazy"
+          />
+        </figure>
+        <figure class="gallery_img">
+          <img
+            src="img/gallery/9.webp"
+            alt="destination images"
+            loading="lazy"
+          />
+        </figure>
+        <figure class="gallery_img">
+          <img
+            src="img/gallery/10.webp"
+            alt="destination images"
+            loading="lazy"
+          />
+        </figure>
+        <figure class="gallery_img">
+          <img
+            src="img/gallery/11.webp"
+            alt="destination images"
+            loading="lazy"
+          />
+        </figure>
+        <figure class="gallery_img">
+          <img
+            src="img/gallery/12.webp"
+            alt="destination images"
+            loading="lazy"
+          />
+        </figure>
+        <figure class="gallery_img">
+          <img
+            src="img/gallery/13.webp"
+            alt="destination images"
+            loading="lazy"
+          />
+        </figure>
+        <figure class="gallery_img">
+          <img
+            src="img/gallery/14.webp"
+            alt="destination images"
+            loading="lazy"
+          />
+        </figure>
+        <figure class="gallery_img">
+          <img
+            src="img/gallery/15.webp"
+            alt="destination images"
+            loading="lazy"
+          />
+        </figure>
+        <figure class="gallery_img">
+          <img
+            src="img/gallery/16.webp"
+            alt="destination images"
+            loading="lazy"
+          />
+        </figure>
+        <figure class="gallery_img">
+          <img
+            src="img/gallery/17.webp"
+            alt="destination images"
+            loading="lazy"
+          />
+        </figure>
+        <figure class="gallery_img">
+          <img
+            src="img/gallery/18.webp"
+            alt="destination images"
+            loading="lazy"
+          />
+        </figure>
+        <figure class="gallery_img">
+          <img
+            src="img/gallery/19.webp"
+            alt="destination images"
+            loading="lazy"
+          />
+        </figure>
+        <figure class="gallery_img">
+          <img
+            src="img/gallery/20.webp"
+            alt="destination images"
+            loading="lazy"
+          />
+        </figure>
       </section>
     </main>
   </body>
